# code-20211109-abbas

./: .gitignore  pyproject.toml  requirements.txt
app/: app.py  bmi.py  model.py
app/test/: test_bmi.py
sample_data/: sample.json
