[tool.poetry]
name = "bmi_app"
version = "0.1.0"
description = ""
authors = ["Abbas <abbazs@gmail.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
pandas = "^1.3.4"
rich = "^10.13.0"
numpy = "^1.21.4"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
requests = "^2.26.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^6.2.5"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
